--- a/WebMagazine/Views/SalesRecords/Create.cshtml
+++ b/WebMagazine/Views/SalesRecords/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using WebMagazine.Models.Enums;
-@model WebMagazine.Models.SalesRecord
+﻿@model WebMagazine.Models.SalesRecord
 
 @{
     ViewData["Title"] = "Create";
@@ -25,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" asp-items="Html.GetEnumSelectList<SaleStatus>()" class="form-control"></select>
+                <select asp-for="Status" asp-items="Html.GetEnumSelectList<WebMagazine.Models.Enums.SaleStatus>()" class="form-control"></select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
