ajustado o create SalesRecord com viewmodel

--- a/WebMagazine/Views/Shared/_Layout.cshtml
+++ b/WebMagazine/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Sellers" asp-action="Index">Sellers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SalesRecord" asp-action="Index">Sales Record</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SalesRecords" asp-action="Index">Sales Records</a>
                         </li>
                     </ul>
                 </div>
