ajustado o edit SalesRecord com viewmodel

--- a/WebMagazine/Views/SalesRecords/Edit.cshtml
+++ b/WebMagazine/Views/SalesRecords/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebMagazine.Models.SalesRecord
+﻿@model WebMagazine.Models.ViewModels.SalesRecordFormViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,26 +12,29 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="SalesRecord.Id" />
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                <label asp-for="SalesRecord.Date" class="control-label"></label>
+                <input asp-for="SalesRecord.Date" class="form-control" />
+                <span asp-validation-for="SalesRecord.Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
+                <label asp-for="SalesRecord.Price" class="control-label"></label>
+                <input asp-for="SalesRecord.Price" class="form-control" />
+                <span asp-validation-for="SalesRecord.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
+                <label asp-for="SalesRecord.Status" class="control-label"></label>
+                <select asp-for="SalesRecord.Status" asp-items="Html.GetEnumSelectList<SaleStatus>()"></select>
+                <!--<select asp-for="Status" asp-items="Html.GetEnumSelectList<WebMagazine.Models.Enums.SaleStatus>()" class="form-control"></select>-->
+                <span asp-validation-for="SalesRecord.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SellerId" class="control-label"></label>
-                <select asp-for="SellerId" class="form-control" asp-items="ViewBag.SellerId"></select>
-                <span asp-validation-for="SellerId" class="text-danger"></span>
+                <label asp-for="SalesRecord.SellerId" class="control-label"></label>
+                <select asp-for="SalesRecord.SellerId" class="form-control"
+                        asp-items="@(new SelectList(Model.Sellers, "Id", "Name"))"></select>
+                <span asp-validation-for="SalesRecord.SellerId" class="text-danger"></span>
+                <!--<select asp-for="SalesRecord.SellerId" class="form-control" asp-items="ViewBag.SellerId"></select>-->
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
